methods.basics.Methods.scala.error
Erreur de compilation :
Methods:2: error: not found: value overBaggle
  while(!overBaggle()){
         ^Methods:5: error: not found: value overBaggle
  if(overBaggle()){
     ^